2048-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "2048-2-deployment"
  namespace: "2048-game"
spec:
  selector:
    matchLabels:
      app: "2048-2"
  replicas: 1
  template:
    metadata:
      labels:
        app: "2048-2"
    spec:
      containers:
      - image: alexwhen/docker-2048
        imagePullPolicy: Always
        name: "2048-2"
        ports:
        - containerPort: 80
