2048-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-2048-2"
  namespace: "2048-game"
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: env=dev,owner=6s-lac-devops@sixt.com,cost center=0,confidentiality=3,gdpr=yes,project=common infrastructure,type=testing
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: "2048-2"
