2048-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alb-ingress-2048
  namespace: 2048-game
  annotations:
    kubernetes.io/ingress.class: alb
    # required to use ClusterIP
    alb.ingress.kubernetes.io/target-type: ip
    # required to place on public-subnet
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: 2048-game
    # use TLS registered to our domain, ALB will terminate the certificate
    # Is it possible to add more then 1 cert? How it will work in this case? 
    # Chek URL below (certificate-arn):
    #   https://kubernetes-sigs.github.io/aws-load-balancer-controller/guide/ingress/annotations/
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:123456789012:certificate/573c4e07-3733-43ba-9824-4cd8d8e78772,arn:aws:acm:eu-central-1:123456789012:certificate/34abcb9b-daf8-4760-a993-22ed6bb07e44
    # respond to both ports
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # redirect to port 80 to port 443
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  # Is it possible to serve more then 1 "host"?
  - host: game1.company.com
    http:
      paths:
      - backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
        path: /*
      - backend:
          serviceName: service-2048-1
          servicePort: 80
        path: /*
  - host: game2.company.com
    http:
      paths:
      - backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
        path: /*
      - backend:
          serviceName: service-2048-2
          servicePort: 80
        path: /*
